Fix room image borders on IE.

--- a/src/main/resources/public/css/meerkat.css
+++ b/src/main/resources/public/css/meerkat.css
@@ -22,7 +22,7 @@ body{
 
 #rooms img {
 	width: 350px;
-	margin: 25px;
+	margin: 50px;
 }
 
 #rooms{
